# whoof

./: .gitignore  DISCLAIMER.md  LICENSE  README.md  capacitor.config.json  package-lock.json  package.json  pyproject.toml  run.sh  setup.sh
.claude/: launch.json
data/: health-latest.json
docs/: EDGE_CASES.md  IPHONE.md  IPHONE_NATIVE.md  PROTOCOL.md  SHORTCUT.md
docs/superpowers/plans/: 2026-05-20-whoopfree-web-pwa.md
docs/superpowers/specs/: 2026-05-20-whoopfree-redesign-design.md  2026-05-20-whoopfree-web-pwa-design.md
ios/App/App/: Info.plist  capacitor.config.json
ios/App/App.xcodeproj/: project.pbxproj
ios/App/CapApp-SPM/: Package.swift
tests/: test_db.py  test_health.py  test_metrics.py  test_sleep.py  test_workouts.py  test_zones.py
tests/js/ble/: client.test.js  crc.test.js  packet.test.js  parsers.test.js
tests/js/data/: captures.test.js  db.test.js  export.test.js  integrity.test.js  journal.test.js  queries.test.js
tests/js/health/: scale.test.js  sync.test.js
tests/js/metrics/: backfill-rollup.test.js  hrv.test.js  insights.test.js  recovery.test.js  rollup.test.js  sleep.test.js  strain.test.js  weekly.test.js  zones.test.js
tests/js/util/: dst-tz.test.js
web/: app.js  index.html  manifest.json  styles.css  sw.js
web/js/: app-mvp.js
web/js/ble/: client.js  crc.js  packet.js  parsers.js  uuids.js
web/js/data/: api-shim.js  db.js  export.js  queries.js  schema.js
web/js/dev/: capture.js  seed.js
web/js/health/: sync.js
whoopfree/: __init__.py  __main__.py  cli.py  dashboard.py  db.py  metrics.py  sleep.py
(+12 files in other folders)
